Added knockoutjs library.

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -8,6 +8,8 @@
         #{get 'moreStyles' /}
         <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
         <script src="@{'/public/javascripts/jquery-1.5.2.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+	<script type='text/javascript' src='jquery-tmpl.js'></script>
+	<script type='text/javascript' src='knockout-1.2.1.debug.js'></script>
         #{get 'moreScripts' /}
     </head>
     <body>
