Working. Multiple websockets conected with Twitter Streaming API - keyword: android 4.0

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -2,7 +2,7 @@
 #{set title:'Stream' /}
 
 <div class="sixteen columns">
-<h2>Messages</h2>
+<h2>Tweets</h2>
 
 <div data-bind="template: {name: 'messageTemplate', foreach: messages}"></div>
 </div>
